	* arch/arm/src/armv7-m and stm32:  Add support for the IAR toolchain for
	  the limited case of the ARMv7-M architecture and the STM32 chip.  From
	  Aleksandr Vyhovanec (2016-04-02).
	* arch/arm/src/stm32/stm32f40xxx_rtc.c:  Add a custom RTC driver.  From
	  Neil Hancock (2016-04-02).
	* include/nuttx/timer/rtc.h and drivers/timers/rtc.c:  Simplify the RTC
	  interface.  The old interface was way to complex and was not fully
	  implemented anywhere (2016-04-02).
	* Moved NuttX repository to https://bitbucket.org/nuttx/nuttx (2016-04-06).
	* arch/arm/src/armv7-m/iar:  Convert more assembly language files for
	  use with the IAR toolchain.  From Kha Vo (2016-04-08)
	* Fix miscellaneous build issues for the IAR compiler.  From Kha Vo
	  (2016-04-08).
	* tools/ide_exporter.py:  IDE exported Python script for use with the
	  IAR toolchain.  From Kha Vo (2016-04-08).
	* STM3220G-EVAL:  Add support for both the IAR and uVision GCC IDEs
	  From Kha Vo (2016-04-08).
	* STM32F429I Discovery:  Add support for the uVision GCC IDE.   From
	* Kha Vo (2016-04-08).
	* libc/signal and include/signal.h: Rename sigset() to signal().
	  sigset() is the System V function; signal() is the obsoleted POSIX
	  name.  These seem to be equivalent.  Neither are relevant in modern
	  POSIX programming but the name signal() probably has the better
	  credentials.  sigset() is now relegated to a #define in signal.h that
	  makes it equivalent to signal() (2016-04-10).
	* configs/nucleus2g:  Removed the Nucleus2G configuration.  There has
	  not been any activity with the commercial board in a few years and it
	  no longer appears to be available from the 2g-eng.com website.
	  Since the board is commercial and no longer publically available, it
	  no longer qualifies for inclusion in the open source repositories.
	  The code as of this data is still available in the Obsoleted
	  repository at configs/nucleus2g (2016-04-12).